Correct make file
The make file for building docs in linux was bad.  Updated the Makefile
and updated the instructions.

--- a/projects/g++/Makefile
+++ b/projects/g++/Makefile
@@ -10,8 +10,8 @@ $(DIRS):
 
 
 docs:
-	doxygen ../../doc/MengeFull.cfg
-	
+	cd ../.. && doxygen doc/MengeFull.cfg
+
 release:
 	( cd build/release && cmake -DCMAKE_BUILD_TYPE=release ../.. && $(MAKE) --no-print-directory  && make --no-print-directory install)
 #	ctags -R  --language-force=c++ *.*
