Add VisAgent database to MengeVis
Now I can specify a particular agent visualization for the agents.  This
probably isn't the best way forward because it doesn't allow me to have
multiple valid visualizations per agent type.  I'll have to revisit this
when I add human agents.

--- a/projects/VS2013/Menge/MengeVis.vcxproj
+++ b/projects/VS2013/Menge/MengeVis.vcxproj
@@ -20,7 +20,6 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="$(SrcDir)\MengeVis\Runtime\SimSystem.cpp" />
-    <ClCompile Include="$(SrcDir)\MengeVis\Runtime\VisAgent.cpp" />
     <ClCompile Include="$(SrcDir)\MengeVis\Runtime\VisObstacle.cpp" />
     <ClCompile Include="$(SrcDir)\MengeVis\SceneGraph\Context.cpp" />
     <ClCompile Include="$(SrcDir)\MengeVis\SceneGraph\ContextSwitcher.cpp" />
@@ -60,10 +59,11 @@
     <ClCompile Include="$(SrcDir)\MengeVis\Runtime\GoalRenderer\OBBGoalRenderer.cpp" />
     <ClCompile Include="$(SrcDir)\MengeVis\Runtime\GoalRenderer\PointGoalRenderer.cpp" />
     <ClCompile Include="$(SrcDir)\MengeVis\PluginEngine\VisPluginEngine.cpp" />
+    <ClCompile Include="$(SrcDir)\MengeVis\Runtime\VisAgent\VisAgent.cpp" />
+    <ClCompile Include="$(SrcDir)\MengeVis\Runtime\VisAgent\VisAgentDatabase.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="$(SrcDir)\MengeVis\Runtime\SimSystem.h" />
-    <ClInclude Include="$(SrcDir)\MengeVis\Runtime\VisAgent.h" />
     <ClInclude Include="$(SrcDir)\MengeVis\Runtime\VisObstacle.h" />
     <ClInclude Include="$(SrcDir)\MengeVis\SceneGraph\Context.h" />
     <ClInclude Include="$(SrcDir)\MengeVis\SceneGraph\ContextSwitcher.h" />
@@ -112,6 +112,8 @@
     <ClInclude Include="$(SrcDir)\MengeVis\Runtime\GoalRenderer\OBBGoalRenderer.h" />
     <ClInclude Include="$(SrcDir)\MengeVis\Runtime\GoalRenderer\PointGoalRenderer.h" />
     <ClInclude Include="$(SrcDir)\MengeVis\PluginEngine\VisPluginEngine.h" />
+    <ClInclude Include="$(SrcDir)\MengeVis\Runtime\VisAgent\VisAgent.h" />
+    <ClInclude Include="$(SrcDir)\MengeVis\Runtime\VisAgent\VisAgentDatabase.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{57FA5E04-F7D0-47B7-900D-CA2BA94E9D52}</ProjectGuid>
