Add missing cmake file
GCF didn't have its cmake infrastructure.

--- a/projects/g++/Plugins/CMakeLists.txt
+++ b/projects/g++/Plugins/CMakeLists.txt
@@ -35,6 +35,7 @@ ADD_SUBDIRECTORY(FundamentalDiagram)
 ADD_SUBDIRECTORY(Terrain)
 ADD_SUBDIRECTORY(Formations)
 ADD_SUBDIRECTORY(AgtDummy)
+ADD_SUBDIRECTORY(AgtGCF)
 ADD_SUBDIRECTORY(AgtHelbing)
 ADD_SUBDIRECTORY(AgtJohansson)
 ADD_SUBDIRECTORY(AgtKaramouzas)
